fixing dockerfile, AdminGroupTourService.php, color-swagger: white, FindAdventure.php. ending Admin Create Group Tours
