# routes/api/findAdventure.php
@@ -3,6 +3,6 @@
 use App\Http\Controllers\api\V1\FindAdventure\FindAdventureController;
 use Illuminate\Support\Facades\Route;
 
-Route::group(['prefix' => 'findAdventure', 'middleware' => 'api'], function () {
+Route::group(['prefix' => 'findAdventures', 'middleware' => 'api'], function () {
     Route::post('/', [FindAdventureController::class, 'findAdventure']);
 });
